# ESP32FirmataSwift

./: .gitignore  CMakeLists.txt  README.md  flash.sh  monitor.sh  partitions.csv  sdkconfig.defaults
.cache/clangd/index/: AP.cpp.4674F33BEE750C24.idx  AppInsights.cpp.E82D6F33CEF6C9F4.idx  Arduino.h.BFA0C7FD4EDF7CA4.idx  ArduinoOTA.cpp.F35F79F39F293E61.idx  ArduinoOTA.h.7B2C89A349764EF8.idx  AsyncUDP.cpp.3D00473B30C6D54F.idx  AsyncUDP.h.984DFC203EA2FFC6.idx  AuthenticationMiddleware.cpp.D1BC1D30E6685D23.idx  BLE2901.cpp.3E1CF9FFFAC04329.idx  BLE2901.h.962CCA0F3DF65873.idx  BLE2902.cpp.A41AC815891EFDE1.idx  BLE2902.h.D045F9ECA46263B0.idx  BLE2904.cpp.24B4BCF1B2532C62.idx  BLE2904.h.18501FBA5CDB1653.idx  BLEAddress.cpp.23A7C6FA99EEE141.idx  BLEAddress.h.B74180B1C2302A58.idx  BLEAdvertisedDevice.cpp.66E2724BB83C65CD.idx  BLEAdvertisedDevice.h.43F37CF261BB4CA2.idx  BLEAdvertising.cpp.49A2B861D0D2B798.idx  BLEAdvertising.h.D64966DBB5CE93ED.idx  BLEBeacon.cpp.18A44F1C0AC9A466.idx  BLEBeacon.h.E5CFC8C558463766.idx  BLECharacteristic.cpp.54F450B9A9B68494.idx  BLECharacteristic.h.10546EEA4325E486.idx  BLECharacteristicMap.cpp.D75B7D633B3212ED.idx  BLEClient.cpp.B0C95B87ABC654FC.idx  BLEClient.h.319B0DF4EC0A9365.idx  BLEDescriptor.cpp.255F603A45CECC20.idx  BLEDescriptor.h.64EB358271EF32BC.idx  BLEDescriptorMap.cpp.87BF76975F815170.idx  BLEDevice.cpp.09294BA88D3679A2.idx  BLEDevice.h.122AE5AF2B07C7A9.idx  BLEEddystoneTLM.cpp.042781F2A3FC111C.idx  BLEEddystoneTLM.h.A8D25FADCAEFFE40.idx  BLEEddystoneURL.cpp.AB5314D1FB1406EB.idx  BLEEddystoneURL.h.A404B34D1ADB2D13.idx  BLEExceptions.cpp.D2E4A09B0260FC9E.idx  BLEHIDDevice.cpp.3BFDB2DB902F4CDD.idx  BLEHIDDevice.h.F058E8E03DDA113B.idx  BLERemoteCharacteristic.cpp.8A787B272EE55A78.idx  (+1202 more)
main/: BridgingHeader.h  CMakeLists.txt  Configuration.swift  DHTModule.swift  DisplayModule.swift  Encoder7Bit.swift  FirmataProtocol.swift  IRModule.swift  LiveProtocol.swift  Main.swift  Messaging.swift  MicModule.swift  Modules.swift  RuntimeState.swift  Scheduler.swift  Session.swift  SonarModule.swift  Transport.swift  atomic_stubs.c  firmata_shim.cpp  idf_component.yml
